--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div>
             <a href="#" class="logo" id="logo">TRAVEL</a>
             <ul class="menu" id="menu">
-              <li><a href="../HOME/index.html">Home</a></li>
-              <li><a href="../TEMIR YO'L CHIPTALARI/index.html">Temir Yo'l Xizmati</a></li>
-              <li><a href="../VIZA KO'MAGI/index.html">Viza Ko'magi</a></li>
-              <li><a href="../KOMPANIYAMIZ HAQIDA/index.html">Kompaniyamiz Haqida</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./TEMIR YO'L CHIPTALARI/index.html">Temir Yo'l Xizmati</a></li>
+              <li><a href="./VIZA KO'MAGI/index.html">Viza Ko'magi</a></li>
+              <li><a href="./KOMPANIYAMIZ HAQIDA/index.html">Kompaniyamiz Haqida</a></li>
             </ul>
           </div>
         </div>
@@ -48,31 +48,31 @@
             <h1 class="h1-block-1">FOYDALI MA'LUMOTLAR VA TAVSIYALAR</h1> 
           </div> 
           <div class="block-1">
-            <a href="../con1/index.html"><div class="block block-1">
-              <img src="../images/1 content.png" alt="" class="block-img block1-img">
+            <a href="./con1/index.html"><div class="block block-1">
+              <img src="./images/1 content.png" alt="" class="block-img block1-img">
               <h4>HAJ qanday ibodat</h4>
               <p class="p-grey">yoxud musulmonlar nega Makkaga Haj</p>
             </div></a>
-            <a href="../con1/index.html"><div class="block block-1">
-              <img src="../images/2 content.jpg" alt="" class="block-img">
+            <a href="./con1/index.html"><div class="block block-1">
+              <img src="./images/2 content.jpg" alt="" class="block-img">
               <h4>Umra qanday ibodat?</h4>
               <p class="p-grey">umumiy ma'lumot</p>
             </div></a>
-            <a href="../VIZA KO'MAGI/index.html"><div class="block block-1">
-              <img src="../images/3 content.png" alt="" class="block-img">
+            <a href="./VIZA KO'MAGI/index.html"><div class="block block-1">
+              <img src="./images/3 content.png" alt="" class="block-img">
               <h4>Saudia Arabistoni (Haj va Umra)</h4>
               <p class="p-grey">ziyorat qilish uchun kerakli bo'lgan</p>
             </div></a>
-            <a href="../con1/index.html"><div class="block block-1">
-              <img src="../images/4 content.jpg" class="block-img" alt="">
+            <a href="./con1/index.html"><div class="block block-1">
+              <img src="./images/4 content.jpg" class="block-img" alt="">
               <h4>Umra ziyorati</h4>
                   <p class="p-grey">zarur bo'lgan buyumlar ro'yxati</p>
             </div></a>
           </div>
           <div class="block-2">
             <h3 class="center">Umra va Haj safari tariflari</h3>
-            <a href="../umra safari/index.html"><div class="block-2 block1-1">
-              <img src="../images/mozhno-li-zhenshhine-ehat-v-hadzh-bez-mahrama-720x340.jpg" alt="" class="block-2-img">
+            <a href="./umra safari/index.html"><div class="block-2 block1-1">
+              <img src="./images/mozhno-li-zhenshhine-ehat-v-hadzh-bez-mahrama-720x340.jpg" alt="" class="block-2-img">
               <h2 class="block-2-h2">UMRA ZIYORATI</h2>
               <hr class="block-2-hr">
               <h5 class="block-2-h5">OLTIN - 15 KUNLIK</h5>
@@ -84,8 +84,8 @@
               </h4>    
               <button class="block-2-btn"><a href="../umra safari/">Batafsil</a></button>
             </div></a>
-            <a href="../ramazon 2023/index.html"><div class="block-2 block1-1">
-              <img src="../images/eyyroq2weainxda.jpg" alt="" class="block-2-img">
+            <a href="./ramazon 2023/index.html"><div class="block-2 block1-1">
+              <img src="./images/eyyroq2weainxda.jpg" alt="" class="block-2-img">
               <h2 class="block-2-h2">RAMAZON 2023YIL</h2>
               <hr class="block-2-hr">
               <h5 class="block-2-h5">RAMAZON 15 KUNLIK</h5>
@@ -95,10 +95,10 @@
               <h4 class="block2-h4">
                 3300 USD
               </h4>    
-              <a href="../ramazon 2023/index.html"><button class="block-2-btn">Batafsil</button></a>
+              <a href="./ramazon 2023/index.html"><button class="block-2-btn">Batafsil</button></a>
             </div></a>
-            <a href="../Laylatul qadr/index.html"><div class="block-2 block1-1">
-              <img src="../images/5ea7dd5d7be66.jpg" alt="" class="block-2-img">
+            <a href="./Laylatul qadr/index.html"><div class="block-2 block1-1">
+              <img src="./images/5ea7dd5d7be66.jpg" alt="" class="block-2-img">
               <h2 class="block-2-h2">RAMAZON - LAYLATUL - QADR</h2>
               <hr class="block-2-hr">
               <h5 class="block-2-h5">LAYLATUL QADR - 15 KUNLIK</h5>
@@ -108,7 +108,7 @@
               <h4 class="block2-h4">
                 3900 USD
               </h4>    
-              <a href="../Laylatul qadr/"><button class="block-2-btn">Batafsil</button></a>
+              <a href="./Laylatul qadr/"><button class="block-2-btn">Batafsil</button></a>
             </div></a>
             
           </div>
@@ -137,15 +137,15 @@
                 </h1>
                 <div class="dlock3-inline">
                   <div class="block-div">
-                    <img src="../images/svg_image_1.svg" alt="" class="block-div-img">
+                    <img src="./images/svg_image_1.svg" alt="" class="block-div-img">
                     <h4>Ma'sulyat bilan <br> yondashuv</h4>
                   </div>
                   <div class="block-div">
-                    <img src="../images/svg_image_2.svg" alt="" class="block-div-img">
+                    <img src="./images/svg_image_2.svg" alt="" class="block-div-img">
                     <h4>Ishonchli Hamyombop <br> Qulay va Arzon</h4>
                   </div>
                   <div class="block-div">
-                    <img src="../images/svg_image_3.svg" alt="" class="block-div-img">
+                    <img src="./images/svg_image_3.svg" alt="" class="block-div-img">
                     <h4>Yuqori malakali <br>mutahasislar ko'magi</h4>
                   </div>  
                 </div>
@@ -153,10 +153,10 @@
             </div>
           <div class="block-4">
             <div class="block-4-img">
-              <img src="../images/tsytsts.jpg" alt="">
-              <img src="../images/papa.jpg" alt="">
-              <img src="../images/untitled-2.jpg" alt="">
-              <img src="../images/vvyvy.jpg" alt="">
+              <img src="./images/tsytsts.jpg" alt="">
+              <img src="./images/papa.jpg" alt="">
+              <img src="./images/untitled-2.jpg" alt="">
+              <img src="./images/vvyvy.jpg" alt="">
             </div>
           </div>
         </section>
@@ -165,10 +165,10 @@
 			<div class="footer-left">
 				<h3>TRA<span>VEL</span></h3>
 				<ul class="footer-links">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Temir Yo'l Xizmati</a></li>
-					<li><a href="#">Viza Komagi</a></li>
-					<li><a href="#">Kompaniya Haqida</a></li>
+					<li><a href="./index.html">Home</a></li>
+					<li><a href="./TEMIR YO'L CHIPTALARI/index.html">Temir Yo'l Xizmati</a></li>
+					<li><a href="./VIZA KO'MAGI/index.html">Viza Komagi</a></li>
+					<li><a href="./KOMPANIYAMIZ HAQIDA/index.html">Kompaniya Haqida</a></li>
 				</ul>
 				<p id="copyrights">All Rights &copy; Reserved<a href="#"> &#64;MSK</a></p>
 			</div>
