--- a/KOMPANIYAMIZ HAQIDA/index.html
+++ b/KOMPANIYAMIZ HAQIDA/index.html
@@ -56,122 +56,122 @@
         <h1>KOMPANIYAMIZ HAQIDA</h1>
       </div>
       <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis earum ex
-        molestiae error. Natus magnam fuga eum dolorem accusamus voluptatem
-        perferendis ex, ullam aliquam minus ea adipisci nisi architecto at esse
-        consequuntur molestias officiis suscipit omnis repudiandae saepe soluta.
-        Iste repellat ducimus porro reprehenderit praesentium incidunt illum in
-        maxime nulla. Amet, assumenda! Error, nesciunt temporibus ex corrupti at
-        quaerat sit dolorum unde quasi voluptatibus cum cumque numquam rem?
-        Excepturi cupiditate consequatur itaque quos, commodi laboriosam minima
-        ipsa maxime reprehenderit sapiente sint autem ducimus blanditiis
-        quisquam molestiae totam est, deserunt dignissimos error. Nesciunt
-        quisquam sapiente modi distinctio recusandae! Culpa nesciunt atque
-        deleniti ducimus repellat ipsum magni distinctio, laboriosam nulla
-        doloremque esse, itaque qui impedit, ex fugit aliquam! Hic sapiente
-        aperiam, necessitatibus eius reiciendis fugiat, blanditiis harum id
-        aliquam perferendis, recusandae saepe doloremque. Saepe provident
-        facilis dolorum veritatis dolore soluta sapiente numquam cum, sint
-        itaque quis accusantium nostrum ex eum impedit sequi iure quos
-        voluptatibus, mollitia ipsum maxime architecto adipisci. Aperiam dolore
-        nihil culpa quisquam itaque, voluptatum optio quam neque? Accusamus
-        cumque culpa dolorum, magni odit distinctio consectetur quos dolores
-        excepturi eaque enim perspiciatis ullam! Ullam dignissimos ea cupiditate
-        officiis error! Ducimus deleniti veritatis totam nostrum corporis illo
-        sunt, eveniet asperiores dolorem libero laboriosam! Voluptatum, quae!
-        Quidem id illo, quasi necessitatibus ut vero enim quaerat eum
-        consequuntur quo sapiente maiores in qui dolore atque animi quis unde
-        asperiores aliquid numquam minima dolor nostrum. Vitae facere vel nisi
-        fugiat. Aliquid sunt reprehenderit saepe mollitia debitis distinctio
-        doloribus doloremque praesentium beatae odit maiores inventore cum ad
-        dolore iste porro aliquam, dolor quae, asperiores numquam optio
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde
+        accusantium reprehenderit tenetur qui obcaecati enim fugiat, vero
+        necessitatibus. Deserunt vel sequi tenetur modi magnam quibusdam vero ex
+        aut expedita libero aperiam et nemo praesentium, consequuntur recusandae
+        possimus reprehenderit aspernatur soluta, commodi quam at cumque amet
+        veniam. Perferendis, ab eveniet dolorum eligendi molestiae distinctio
+        possimus architecto beatae ut, unde incidunt soluta quibusdam iure
+        voluptates vel quae reprehenderit inventore laborum aliquid amet id
+        minima? Similique, quo numquam! Accusamus facilis aperiam deserunt
+        quaerat voluptate aliquam nulla qui reprehenderit adipisci vel officia
+        possimus, iste sit illo perferendis quod corrupti? Iste corrupti atque
+        unde, temporibus, id eaque quos ullam ea sit aut at cupiditate eligendi
+        repellat omnis voluptatum numquam? Sapiente alias, delectus veniam
+        aliquid numquam officiis. Quas eius omnis nulla exercitationem cum
+        eligendi quaerat, alias ipsa dignissimos doloremque laboriosam nihil eum
+        iure ea illo aspernatur veniam. Officia iure nobis quas quod dolorum, ut
+        ipsa voluptatum quis maxime fugiat, doloremque, rem eius eaque dolore
+        aperiam ad autem. Voluptates adipisci tempora, nam repellendus, magni
+        assumenda id atque dolores aperiam optio consequuntur eos! Repellendus
+        laborum vel officia corrupti molestias perferendis, ullam quod quam odio
+        deserunt minima fuga iusto natus quaerat aut? Aspernatur veniam ipsum
+        laboriosam, maiores perferendis aliquid? Ex sapiente veritatis pariatur?
+        Exercitationem eaque sint similique deleniti nesciunt, accusantium
+        tempore est, dolore neque necessitatibus ab velit earum natus?
+        Voluptatem quidem accusantium mollitia corrupti doloribus ea, sed
+        pariatur laboriosam cumque dolores velit omnis, minus voluptate quas
+        nesciunt autem inventore. Sapiente labore dignissimos unde ex dolor
+        quisquam incidunt recusandae aspernatur minima asperiores! Pariatur
+        molestias culpa earum provident voluptatem ipsa quibusdam recusandae
+        mollitia. Minima, molestias possimus? Fugiat asperiores provident modi
+        quisquam ipsa quam! Natus laborum soluta ex placeat. Nulla ratione
+        dolorum maiores repudiandae eius, eligendi impedit aliquam quasi
+        adipisci autem non minima harum illo a porro sint quidem ad
+        necessitatibus aperiam facilis quaerat dolor qui voluptatem. Iure, in
+        itaque. Obcaecati laboriosam tempore, repellendus esse deserunt labore
+        accusantium doloribus voluptate aut at libero? Nulla eius consectetur
+        odit necessitatibus eveniet? Tempora ducimus modi ut quidem! Ipsa
+        voluptate sint at tenetur fugit totam adipisci sit, ut voluptas quos
+        delectus cupiditate dolor doloribus asperiores quaerat soluta, provident
+        rem in incidunt recusandae assumenda. Sunt, consectetur magni nobis
+        explicabo odit facilis laudantium provident quaerat asperiores beatae.
+        Quod magni dolorum iusto vitae. Illo non dolore magnam temporibus
+        perferendis odit cum, hic, culpa quasi qui expedita, labore veniam sit.
+        Quis at sunt porro necessitatibus ducimus non assumenda libero?
       </div>
-      <br />
-      <hr />
-      <br />
-      <div>
-        porro voluptatem nisi dolore a totam, at odio eligendi. Accusamus
-        eligendi dignissimos cupiditate repellendus deleniti quisquam ea facilis
-        aliquid aperiam, molestias, ex eos mollitia illo autem doloribus.
-        Exercitationem facere nihil consectetur ut, ad natus voluptate
-        consequatur dignissimos tenetur assumenda totam molestiae. Architecto,
-        adipisci? Nulla optio dolor accusantium, at delectus, ipsum iste,
-        accusamus aspernatur maiores atque sint numquam! Optio dolor voluptas
-        repudiandae! Laudantium, sunt, expedita quo culpa sit sapiente ullam
-        quod hic earum neque repellendus? Harum omnis perferendis, neque
-        repellendus exercitationem pariatur, quasi autem asperiores eos a unde
-        minima libero similique? Officia, omnis inventore? Laboriosam fuga,
-        nihil at impedit ratione consectetur corporis deleniti atque quidem
-        porro architecto aliquam accusamus magnam nisi nemo repudiandae est
-        omnis, nostrum ex? Dolores, saepe explicabo hic nulla recusandae cumque
-        perspiciatis perferendis voluptate quidem. Illum doloremque vel nam
-        adipisci cupiditate tempora modi esse? Accusamus asperiores corporis
-        distinctio, blanditiis vero quis sed reprehenderit quo beatae nisi
-        placeat dicta minima cupiditate quaerat et similique voluptas odit esse
-        expedita, quam sint explicabo nihil. Ex earum magni accusamus pariatur
-        cum, inventore doloribus omnis, iusto corrupti excepturi praesentium.
-        Quam cum odio reiciendis officia quia consequatur velit harum
-        voluptatibus dolorum accusantium! Nemo nihil commodi accusantium dolore
-        minus distinctio quaerat rerum consectetur, ipsam porro. Sit ut soluta
-        maiores dignissimos id commodi ex, totam repudiandae fugiat sint
-        perferendis quaerat itaque mollitia provident, tempora, quos temporibus
-        quod incidunt odit assumenda voluptate cupiditate. Officia ullam quod
-        nostrum at optio nemo sint. Pariatur consequatur fugit repudiandae
-        itaque adipisci explicabo necessitatibus, rerum totam voluptatum
-        inventore dignissimos sit ut aperiam dolorum rem officia fugiat repellat
-        qui. Quia, qui aut quaerat natus odit libero dolore dolores distinctio
-        dicta recusandae quibusdam mollitia similique ratione ab alias, quisquam
-        dolorum aperiam quam sequi eaque, atque delectus repellat
-        exercitationem. Aspernatur, dolore ipsam ea quos inventore hic ipsa
-        ducimus tempore impedit perspiciatis, earum iure vel distinctio
-        laudantium odio neque assumenda quo necessitatibus repellendus harum,
-        quisquam optio fuga. Molestias, excepturi eos impedit saepe mollitia
-        voluptatum fugit omnis, eum dignissimos assumenda id quisquam commodi
-        facere corrupti nulla rerum? Laudantium fugiat perspiciatis, quam sunt
-        distinctio, ipsum, natus fuga accusamus numquam eveniet temporibus.
-        Necessitatibus laborum corporis quae, doloribus earum at dolorem
-        obcaecati mollitia architecto et reprehenderit laudantium facere
-        dolores, molestias, quisquam ipsam eaque fuga sit! Officia, accusantium!
-        Cum ipsa sapiente quisquam voluptas sed minima velit facere ut libero
-        earum, aperiam fuga doloribus, ratione saepe. Placeat animi nisi fuga
-        sapiente iste, accusantium quae reiciendis ratione, incidunt ad illo
-        unde inventore? Similique numquam ea unde, quibusdam, eveniet minus
-        facere nesciunt tempore veniam ratione quod inventore deserunt minima,
-        ipsa rerum! Iure possimus eos laudantium autem ullam iste dolore illo
-        aut numquam ut iusto rem dicta dolorem ratione maiores magnam placeat
-        sunt, quis inventore vel voluptas hic labore rerum. Tempora at
-        dignissimos, necessitatibus corrupti dolorum ex aperiam, qui doloremque
-        fugit in id deleniti minus, cumque illum magni inventore maiores quaerat
-        sunt animi soluta voluptate. Repellat architecto nisi nobis sed
-        expedita, autem pariatur dolores vero cupiditate modi, quisquam dolore.
-        Aliquam quae natus labore unde nostrum est, excepturi vel, tenetur saepe
-        totam distinctio corporis modi earum, dignissimos odio tempore? Veniam
-        magnam cupiditate perferendis! Non impedit itaque eius ad iste
-        asperiores architecto, neque sint ullam beatae laudantium provident
-        facere, ea possimus, quia minima. Labore eum pariatur asperiores quasi
-        sed quisquam expedita saepe beatae, rerum doloremque cumque quibusdam
-        recusandae, unde repudiandae veniam dolores suscipit vero amet earum
-        itaque accusantium, eligendi nam atque aperiam. Libero culpa facilis
-        pariatur accusantium ratione cumque nisi non omnis temporibus dolores
-        similique illum fugit facere, a voluptatem hic voluptas at architecto!
-        Placeat accusamus eos optio possimus quos magni in impedit, quasi
-        excepturi iusto cum consequuntur amet pariatur, tempore architecto!
-        Incidunt impedit voluptas, aliquid assumenda quasi at ad magni eos. Est,
-        laudantium? Eos maxime repellat commodi, architecto placeat saepe sint
-        sit, laboriosam recusandae laudantium asperiores accusantium,
-        consequuntur reiciendis nesciunt ex. Optio repellendus laborum minima
-        labore nam recusandae quaerat, animi asperiores eos quidem! In sapiente
-        quam veniam praesentium doloremque! Exercitationem quasi necessitatibus
-        doloremque amet officiis omnis delectus sit possimus, reiciendis animi
-        commodi dicta facilis perspiciatis expedita, soluta, suscipit veniam.
-        Quae nostrum, obcaecati laboriosam laborum minima nemo vitae esse
-        voluptatum sapiente cupiditate earum consequatur id adipisci itaque vel
-        exercitationem aut, distinctio nobis similique et porro. Nihil soluta
-        modi itaque sed ex, possimus nulla doloremque? Magnam quasi dolorem,
-        quas est officiis ex molestiae ipsum quidem quod sunt, ducimus sit
-        aspernatur accusantium sequi optio excepturi earum dignissimos provident
-        iste tenetur? Alias consequatur facere, in perferendis minus saepe eaque
-        minima?
+      <br>
+      <hr>
+      <br>
+      <div>  
+        Veritatis nulla qui a culpa repudiandae cum ducimus magnam
+        exercitationem odio doloremque quae commodi, totam ratione magni
+        perspiciatis eos tempora ad adipisci asperiores! Id, obcaecati? Neque
+        accusantium reprehenderit laborum dolorum asperiores amet ratione
+        dolorem distinctio! Libero, sint recusandae pariatur ipsam temporibus
+        deleniti eveniet voluptatum sapiente suscipit impedit aliquid iure earum
+        vel, incidunt fuga saepe nobis. Dolorum rem ut saepe sunt, culpa aliquid
+        molestias enim, pariatur deleniti maiores amet aliquam placeat. Commodi
+        ratione repellat incidunt mollitia, labore quos dolores natus illo,
+        officiis, nemo at vel quibusdam perferendis nostrum consequuntur libero
+        eos sapiente architecto repellendus ipsa omnis officia animi? Nihil cum
+        natus consequatur asperiores voluptatem. Quasi praesentium facere
+        nesciunt nisi quis, labore numquam, dicta quo vero tenetur quas, eaque
+        iusto dolores illum ex possimus! Cupiditate, amet! Inventore corrupti,
+        unde consequatur non hic natus architecto, voluptates iste
+        exercitationem veniam accusantium. Explicabo impedit ipsum, culpa eos
+        porro aliquid. Excepturi aut officia quos ad natus perspiciatis culpa
+        beatae voluptate ab, eum unde exercitationem. Sed fugit qui cum itaque
+        quae, deleniti labore aliquid suscipit incidunt inventore, voluptatem
+        maxime explicabo, quas ducimus nobis! Necessitatibus doloribus expedita
+        culpa laboriosam atque, optio magni quasi? Sequi magni nemo excepturi,
+        quibusdam consequatur repudiandae odit, voluptates consectetur labore
+        adipisci nisi aliquid nulla? Debitis voluptas accusantium voluptatem
+        ipsa non voluptatibus obcaecati quia suscipit ab doloremque facilis
+        error perspiciatis labore corrupti esse, explicabo laborum qui expedita
+        ut ipsam sit? Sed temporibus obcaecati ab, autem magni voluptatum dicta
+        animi, harum veritatis veniam saepe error ad rem, possimus quisquam
+        laborum fugit laboriosam. Cum illum similique ratione repudiandae.
+        Veniam ipsum maxime necessitatibus amet eum, in praesentium sit,
+        blanditiis dicta, fugiat ipsam laborum suscipit tempore aspernatur eaque
+        quia hic omnis maiores iure eveniet! Repellat ipsum eveniet reiciendis
+        ab ad! Hic eaque excepturi ducimus ipsam minus repellendus eligendi
+        voluptatum tempora nobis doloremque aliquid doloribus quaerat officia
+        corrupti laudantium, magnam magni eius beatae aperiam voluptatibus!
+        Nisi, eligendi, accusantium omnis laboriosam quae minus esse natus est
+        alias asperiores ipsam nulla tenetur. Hic, animi nisi, sint mollitia qui
+        ratione cupiditate necessitatibus vero dolor tempore voluptate veniam ea
+        autem cum magni doloribus. Placeat optio, maiores amet laborum labore
+        facilis voluptatibus! Cum illo quasi recusandae praesentium atque.
+        Dolorum nesciunt cum ea rerum praesentium vero fuga delectus culpa. Eos
+        dicta tempora beatae veritatis quisquam autem optio facilis ea ipsum
+        fugit, odit obcaecati vero ullam praesentium, dolor accusantium!
+        Suscipit commodi quam architecto error minus veniam culpa ratione,
+        laboriosam voluptatibus inventore, ullam officiis! Illo error incidunt
+        tempora mollitia adipisci, fuga enim aliquam pariatur veniam cum ullam
+        distinctio tenetur numquam possimus omnis inventore repellendus harum
+        iste quae aspernatur rem quos architecto? Dolore laborum iste
+        consequatur veritatis veniam hic. Quas recusandae quo facilis.
+        Perspiciatis et, earum voluptas quaerat dolorem similique harum eligendi
+        consequatur ea, animi sint est dicta, itaque enim recusandae molestias
+        laborum eveniet exercitationem! Explicabo deserunt placeat eius qui
+        repellendus quaerat, eligendi error magnam alias provident inventore
+        accusantium quibusdam officiis consectetur, ut ea nisi laboriosam, odit
+        obcaecati beatae facere. Quam omnis id, perferendis repellendus,
+        voluptatibus, est sint corporis esse nemo molestias laudantium
+        exercitationem deserunt laboriosam porro facere aliquid dignissimos?
+        Incidunt esse libero, pariatur aperiam, nobis iure in deserunt quae
+        accusamus ducimus modi molestiae ut animi. Dolorem quo, fugit suscipit
+        at accusamus, ad tempora autem officiis illum unde molestiae maxime
+        quos, error explicabo tempore! Amet hic perferendis excepturi voluptas
+        animi qui provident magnam pariatur eveniet ratione tempore architecto
+        consectetur, illo dolorem veritatis fugiat a quia? Nisi unde corrupti
+        nemo praesentium doloribus voluptatem animi tenetur inventore labore
+        necessitatibus, ipsum omnis a cumque fuga doloremque. Quam quasi, dolor
+        sapiente, hic sunt quos neque in natus, ex inventore fuga sed unde rem.
+        Eligendi ea ipsum quaerat explicabo suscipit temporibus culpa laboriosam
+        recusandae beatae!
       </div>
     </div>
     <footer class="footer-distributed">
